objects/UserData__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Backlog__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The running tally of work assigned to a user</description>
        <label>Case Backlog</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadPoints__c</fullName>
        <label>LeadPoints</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserNumber__c</fullName>
        <label>UserNumber</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Name_Search__c</fullName>
        <description>Searchable text field for the user&apos;s full name via global search.</description>
        <label>User Name Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_eMail_Search__c</fullName>
        <description>Searchable text field for the user&apos;s email via global search</description>
        <label>User eMail Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkloadPoints__c</fullName>
        <label>WorkloadPoints</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>UserData</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>UserNumber__c</columns>
        <columns>Available__c</columns>
        <columns>Case_Backlog__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>UserData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserData</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>